[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconify"
version = "2.0.0"
authors = [
  { name="Reconify Team", email="services@reconify.com" },
]
description = "A package for sending data to the Reconify platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/reconify-com/reconify-pip#readme"
"Bug Tracker" = "https://github.com/reconify-com/reconify-pip/issues"